# dependency-buster

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  IDE_INTEGRATION.md  ISSUES_FIXED.md  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  TECHDOCS_ANALYSIS.md  VIEWING_DOCS.md  build-all.sh
docs-go/: architecture.md  dependencies.md  index.html  index.md  licenses.md  security.md
docs-rust/: architecture.md  changelog.md  dependencies.md  index.html  index.md  licenses.md
docs-typescript/: architecture.md  dependencies.md  index.html  index.md  licenses.md  security.md
dpb-benchmark/: Makefile  README.md  check-server.sh  setup.sh
dpb-benchmark/dashboard/: index.html
dpb-benchmark/results/: .gitkeep
dpb-benchmark/scripts/: Cargo.toml  README.md  generate-report  generate-report.go  generate-report.py  generate-report.rs  run-benchmark.sh
dpb-benchmark/server/: .air.toml  go.mod  main.go
dpb-mcp-go/: .gitignore  Makefile  QUICKSTART.md  README.md  go.mod
dpb-mcp-rust/: .gitignore  Cargo.toml  Makefile  QUICKSTART.md  README.md
dpb-mcp-rust/config/: faith-fm-repos.example.json  repos.example.json
dpb-mcp-rust/src/: main.rs
dpb-mcp-rust/src/analyzer/: dependency.rs  mkdocs.rs  mod.rs  namespace.rs  psr4.rs  security.rs  suggestions.rs  tracker.rs
dpb-mcp-rust/src/composer/: mod.rs
dpb-mcp-rust/src/mcp/: annotations.rs  auth.rs  errors.rs  http_transport.rs  mod.rs  registry.rs
dpb-mcp-rust/src/types/: mod.rs
dpb-mcp-typescript/: .gitignore  LICENSE  QUICKSTART.md  README.md  package-lock.json  package.json  setup.sh  tsconfig.json
(+42 files in other folders)
